# hh_project

./: .gitignore  README.md  main.py  pyproject.toml
data/: vacancies.json
src/: abstrclasses.py  api_classes.py  file_classes.py  utils.py  vacancy_class.py
tests/: test_hh_project.py
