[tool.poetry]
name = "hh-project"
version = "0.1.0"
description = "Курсовая работа для сбора вакансий с hh.ru"
authors = ["Никита Данилов danilovn1@mail.com"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = "^7.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"